Build java runtime manually with jlink